# sql-mcp

./: README.md  pyproject.toml  server.py
utils/: data_reader.py
