[project]
name = "sql-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "markdownify>=1.1.0",
    "pydantic>=2.10.6",
    "readabilipy>=0.2.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "pymysql>=1.1.1",
]
